# sammine-lang

./: .gitignore  .gitmodules  AstBase_8h.html  AstBase_8h__dep__incl.map  AstBase_8h__dep__incl.md5  AstBase_8h_source.html  AstDecl_8h.html  AstDecl_8h__dep__incl.map  AstDecl_8h__dep__incl.md5  Ast_8h.html  Ast_8h__dep__incl.map  Ast_8h__dep__incl.md5  Ast_8h_source.html  BiTypeChecker_8h.html  BiTypeChecker_8h__dep__incl.map  BiTypeChecker_8h__dep__incl.md5  BiTypeChecker_8h_source.html  CMakeLists.txt  CodegenUtils_8h_source.html  CodegenVisitor_8cpp.html  CodegenVisitor_8cpp__incl.map  CodegenVisitor_8cpp__incl.md5  CodegenVisitor_8h.html  CodegenVisitor_8h__dep__incl.map  CodegenVisitor_8h__dep__incl.md5  CodegenVisitor_8h__incl.map  CodegenVisitor_8h__incl.md5  CodegenVisitor_8h_source.html  Compiler_8h.html  Compiler_8h__dep__incl.map  Compiler_8h__dep__incl.md5  Garbage_8h.html  Garbage_8h__dep__incl.map  Garbage_8h__dep__incl.md5  Garbage_8h__incl.map  Garbage_8h__incl.md5  Garbage_8h_source.html  GeneralSemanticsVisitor_8h.html  GeneralSemanticsVisitor_8h__dep__incl.map  GeneralSemanticsVisitor_8h__dep__incl.md5  (+93 more)
.claude/hooks/: post-stop-tests.sh
.github/workflows/: clang-tidy.yml  doxygen.yml  macos.yml  ubuntu.yml
benchmarks/cpp/: euler10.cpp  kernel_map.cpp  kernel_reduce.cpp
benchmarks/sammine/: kernel_map.mn  kernel_reduce.mn
docs/: architecture.md  grammar.md  language-reference.md  parsing.md
e2e-tests/: CMakeLists.txt  lit.cfg.py
e2e-tests/compilables/: alloc_basic.mn  alloc_deref_modify.mn  alloc_type_mismatch.mn  arith.mn  arr_len.mn  arr_len_non_array.mn  call_func.mn  call_func_with_params.mn  call_nonexist.mn  even.mn  fib.mn  free_non_pointer.mn  gc_test.mn  hello.mn  i32_basic.mn  i32_default.mn  i32_i64_mismatch.mn  i32_main_wrong_return.mn  if.mn  implicit_return.mn  main.mn  print.mn  ptr_deref_non_pointer.mn  ptr_extra_close.mn  ptr_missing_close.mn  ptr_nested_mismatch.mn  ptr_triple_nested_mismatch.mn  same_name_func.mn  same_name_var_func.mn  simple_record.mn  simple_var_types.mn  str.mn  var_and_numexpr.mn
e2e-tests/error_reporting/: arr_dim_non_array.mn  array_write_error.mn  bare_assignment.mn  bitwise_on_float.mn  case_arm_type_mismatch.mn  case_literal_duplicate.mn  case_literal_float.mn  case_literal_mixed.mn  case_literal_no_wildcard.mn  case_multi_missing.mn  case_non_enum.mn  case_non_exhaustive.mn  case_wrong_bindings.mn  case_zero_bindings.mn  closure_captures_nested_struct_ptr.mn  closure_captures_stack_ptr_array.mn  closure_captures_stack_ptr_struct.mn  closure_captures_stack_ptr_tuple.mn  closure_direct_return_ptr.mn  closure_direct_return_struct_ptr.mn  closure_direct_return_tuple_ptr.mn  closure_escape_via_array.mn  closure_escape_via_struct.mn  closure_escape_via_tuple.mn  double_invalid.mn  enum_discriminant_payload.mn  enum_variant_arg_count.mn  enum_wrong_variant.mn  for_type_mismatch.mn  func_arg_type_mismatch.mn  func_too_many_args.mn  generic_arg_count.mn  hint_linearity_mismatch.mn  hint_mutability.mn  hint_signed_unsigned.mn  hint_tuple_arity.mn  if_branch_mismatch.mn  if_cond_not_bool.mn  immutable_array_write.mn  immutable_array_write_const_oob.mn  (+36 more)
e2e-tests/euler/: euler1.mn  euler10.mn  euler11.mn  euler12.mn  euler13.mn  euler14.mn  euler15.mn  euler16.mn  euler17.mn  euler18.mn  euler19.mn  euler2.mn  euler20.mn  euler3.mn  euler4.mn  euler5.mn  euler6.mn  euler7.mn  euler8.mn  euler9.mn
include/ast/: ASTContext.h  ASTProperties.h  Ast.h  AstBase.h  AstDecl.h  AstWalkers.h
include/codegen/: CodegenUtils.h  CodegenVisitor.h  Garbage.h  LLVMRes.h  LinalgReduceToGpu.h  LowerSammineOps.h  MLIRGen.h  MLIRGenBinaryOps.h  MLIRGenImpl.h  MLIRLowering.h  SammineDialect.h  SammineJIT.h  SammineOps.td  TypeConverter.h
include/compiler/: Compiler.h  CompilerDB.h  Options.h
include/cst/: CSTBridge.h  GreenNode.h  SyntaxKind.h  SyntaxNode.h  TreeBuilder.h
include/lex/: Lexer.h  Token.h
include/parser/: Combinators.h  Parser.h
include/semantics/: GeneralSemanticsVisitor.h  ScopeGeneratorVisitor.h
include/typecheck/: BiTypeChecker.h  LinearTypeChecker.h  Monomorphizer.h  Types.h  UniSubst.h
include/util/: Tracy.h  (+5 more)
knowledge_base/: codegen.md  compiler_pipeline.md  cpu_gpu_boundary_papers.md  cst.md  e2e_tests.md  enum_support.md  extensible_arr.md  fix_generic_struct_linear_vec.md  frontend.md  gotchas.md  gpu_codegen.md  imports.md  kernel.md  lex_and_parse.md  mlir_linalg_gpu_api_reference.md  semantics.md  type_checking.md  type_system.md
plans/: cuda-codegen.md  extensible_arr.md  generic-import-followup.md  gpu_notes.md  kernel-linalg-codegen.md  kernel-syntax.md  mlir-backend.md
scripts/: check_build_flags.py
search/: all_3.js  all_7.js  all_e.js  all_f.js  classes_2.js  classes_b.js  files_2.js  files_4.js  functions_0.js  functions_3.js  searchdata.js
src/: ASTParser.cpp  CMakeLists.txt  Parser.cpp  sammine.cpp
src/ast/: Ast.cpp  AstPrinterVisitor.cpp  AstToString.cpp  AstWalkers.cpp  CMakeLists.txt
src/codegen/: CMakeLists.txt  CodegenUtils.cpp  CodegenVisitor.cpp  FunctionCodegen.cpp  Garbage.cpp  LinalgReduceToGpu.cpp  LowerSammineOps.cpp  MLIRGen.cpp  MLIRGenBinaryOps.cpp  MLIRGenExpr.cpp  MLIRGenFunction.cpp  MLIRGenKernel.cpp  MLIRLowering.cpp  SammineDialect.cpp  SammineJIT.cpp  TypeConverter.cpp
src/compiler/: CMakeLists.txt  Compiler.cpp  CompilerDB.cpp  library_emitter.cpp  options.cpp  resolver.cpp  sammine.cpp
src/cst/: CMakeLists.txt  CSTBridge.cpp  GreenNode.cpp  SyntaxKind.cpp  SyntaxNode.cpp  TreeBuilder.cpp
src/lex/: Lexer.cpp
src/semantics/: GeneralSemanticsVisitor.cpp  ScopeGeneratorVisitor.cpp
src/typecheck/: BiTypeChecker.cpp  BiTypeCheckerSynthesize.cpp  CMakeLists.txt  LinearTypeChecker.cpp  Monomorphizer.cpp  Types.cpp  UniSubst.cpp
src/util/: CMakeLists.txt  Logging.cpp  Utilities.cpp
stdlib/: definitions.mn  io.mn  io_runtime.c  std.mn  str.mn  vec.mn
tools/: CMakeLists.txt  update-checks.sh
tools/filecheck/: CMakeLists.txt  SammineCheck.cpp
unit-tests/: CMakeLists.txt  test_cst.cpp  test_invalid_lexer.cpp  test_lexer.cpp  test_parser.cpp
(+364 files in other folders)
